; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/intel/iwlwifi/extr_iwl-drv.c__iwl_op_mode_stop.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/intel/iwlwifi/extr_iwl-drv.c__iwl_op_mode_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_drv = type { i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iwl_drv*)* @_iwl_op_mode_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_iwl_op_mode_stop(%struct.iwl_drv* %0) #0 {
  %2 = alloca %struct.iwl_drv*, align 8
  store %struct.iwl_drv* %0, %struct.iwl_drv** %2, align 8
  %3 = load %struct.iwl_drv*, %struct.iwl_drv** %2, align 8
  %4 = getelementptr inbounds %struct.iwl_drv, %struct.iwl_drv* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.iwl_drv*, %struct.iwl_drv** %2, align 8
  %9 = getelementptr inbounds %struct.iwl_drv, %struct.iwl_drv* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @iwl_op_mode_stop(i32* %10)
  %12 = load %struct.iwl_drv*, %struct.iwl_drv** %2, align 8
  %13 = getelementptr inbounds %struct.iwl_drv, %struct.iwl_drv* %12, i32 0, i32 1
  store i32* null, i32** %13, align 8
  br label %14

14:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @iwl_op_mode_stop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
